--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>>>Thiago Abrantes</title>
+  <title>>>Guy Junior</title>
   <link rel="stylesheet" type="text/css" href="css/custom.css">
 
   <script src="lib/phaser.min.js"></script>	
